Added header with nav and contact form

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Your page title here :)</title>
+  <title>Jott.ly</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -29,18 +29,21 @@
 </head>
 <body>
 
-  <!-- Primary Page Layout
+  <!-- Header
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container">
-    <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
-        <h4>Basic Page</h4>
-        <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
-      </div>
-    </div>
+  <div id="header">
+    <img src="images/logo.png">
+      <nav>
+        <ul>
+          <li><a href="">Sign In</a></li>
+          <li><a href="">Sign Up Now</a></li>
+        </ul>
+      </nav>
+      <h1>An easier way to write &amp; collaborate</h1>
+      <p>Put down the pen and paper. Jott.ly helps you organize your <strong>life, home and office</strong>. It's a simple way to store and share ideas with your loved ones, friends and colleagues.</p>
+      <input type="text" placeholder="Enter your email address">
+      <button input="submit">Sign Up Now</button>
   </div>
-
-<!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    
 </body>
 </html>
