--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
           <h3>Individuals &amp; Family</h3>
         </header>
           <section>
-            <h4>$2</h4>
-            <p>per month/per user</p>
+            <h4><span>$</span>2</h4>
+            <p>per month<br/>/per user</p>
             <ul>
               <li>Unlimited notes</li>
               <li>Unlimited members</li>
@@ -114,8 +114,8 @@
           <h3>Small Businesses</h3>
         </header>
         <section>
-          <h4>$5</h4>
-          <p>per month/per user</p>
+          <h4><span>$</span>5</h4>
+          <p>per month<br/>/per user</p>
           <ul>
             <li>Unlimited notes</li>
             <li>Unlimited members</li>
@@ -132,8 +132,8 @@
           <h3>Enterprise</h3>
         </header>
         <section>
-          <h4>$8</h4>
-          <p>per month/per user</p>
+          <h4><span>$</span>8</h4>
+          <p>per month<br/>/per user</p>
           <ul>
             <li>Unlimited notes</li>
             <li>Unlimited members</li>
